# EventCamera3DReconstruction

./: .gitignore  laser_detection.py  myhough2.ply  mypol2.ply  polarityAccumulation.ply
calib_data/: 1extrinsics.json  1m_camera-geometry.json  1s_camera-geometry.json  extrinsics.json  m_camera-geometry.json  meta_extrinsics.json  meta_int_master.json  meta_int_slav.json  s_camera-geometry.json
install/: local_setup.sh  setup.ps1  setup.sh
install/event_3d_reconstruction/lib/event_3d_reconstruction/: check_sync  test_rec  triangulate
install/event_3d_reconstruction/share/ament_index/resource_index/package_run_dependencies/: event_3d_reconstruction
install/event_3d_reconstruction/share/ament_index/resource_index/parent_prefix_path/: event_3d_reconstruction
install/event_3d_reconstruction/share/event_3d_reconstruction/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/event_3d_reconstruction/share/event_3d_reconstruction/cmake/: event_3d_reconstructionConfig-version.cmake  event_3d_reconstructionConfig.cmake
install/event_3d_reconstruction/share/event_3d_reconstruction/environment/: ament_prefix_path.dsv  path.dsv
laser2/: metadata.yaml
laserscan/: metadata.yaml
log/: latest_build
src/: CMakeLists.txt
src/include/: TimeSurface.h  rectification.hpp
src/include/jir_refractive_image_geometry/: ray.hpp  refracted_pinhole_camera_model.hpp  refraction_operations.hpp
src/include/jir_refractive_image_geometry_msgs/: PlanarRefractionInfo.h
src/src/: TimeSurface.cpp  box_dimensions.py  check_sync.cpp  pinax_model.hpp  test_rec.cpp  triangulate.cpp  uw_legos.py
src/src/install/: local_setup.sh  setup.bash  setup.sh  setup.zsh
src/src/log/: latest_build
